--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ task_management/__pycache__/__init__.cpython-310.pyc
 task_management/__pycache__/settings.cpython-310.pyc
 taskapp/__init__.py
 taskapp/migrations/__init__.py
+.env
